--- a/example/sn-example.lyx
+++ b/example/sn-example.lyx
@@ -808,8 +808,34 @@ Conclusion:
 
 \end_layout
 
+\begin_layout sep
+\begin_inset Note Note
+status collapsed
+
+\begin_layout Plain Layout
+leave this space
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
 \begin_layout Keywords
 keyword1, Keyword2, Keyword3, Keyword4
+\end_layout
+
+\begin_layout sep
+\begin_inset Note Note
+status collapsed
+
+\begin_layout Plain Layout
+leave this space
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Section
